fix :fixed endpoints in docs
