# app/Http/Middleware/VerifyCsrfToken.php
@@ -12,13 +12,8 @@ class VerifyCsrfToken extends Middleware
      * @var array<int, string>
      */
     protected $except = [
-        'api/posts',
         'api/posts/*',
-        'api/comments',
         'api/comments/*',
-        'api/users',
         'api/users/*',
-        'api/groups',
-        'api/groups/*',
     ];
 }
